# gpt-lean

./: LICENSE  README.md  division_theorem  division_theorem.lean  leanpkg.toml
coq/: division_theorem.v  factorial.v
coq_to_lean/: .gitignore  README.md  pyproject.toml
coq_to_lean/coq_to_lean/: __init__.py
coq_to_lean/src/coq_to_lean/: __init__.py  __main__.py  cli.py  examples.py  languages.py  lsp.py  sources.py
coq_to_lean/src/coq_to_lean/destinations/: __init__.py  english.py  lean4.py
coq_to_lean/src/coq_to_lean/sources/: __init__.py  coq.py  english.py  lean4.py
itp_iterative_search_lm/: README.md  install.md  requirements.txt  search_proof_lean.py
itp_iterative_search_lm/cnfgr/: cnfgr.yaml  minif2f.yaml
itp_iterative_search_lm/cnfgr/prompts/: llemma_lean_formal2formal.yaml
itp_iterative_search_lm/fixtures/: lean_examples.json
itp_iterative_search_lm/src/: get_lean_repls.py  language_models.py  lean.py  proofsearch.py  utils.py
lean4/: division_theorem.lean  factorial.lean
textbooks/: pdf_to_math_txt.py  text_to_coq.py
textbooks/Building Blocks/coq/: functions-one-to-one.v  functions-onto.v  graphs.v  number-theory.v  proofs.v  proofs_fixed.v  proofs_raw.v  relations.v  sets.v
textbooks/Building Blocks/coq/fixed/: functions-one-to-one.v  functions-onto.v  graphs.v  logic.v  number-theory-fixed.v  proofs_fixed.v  relations-fixed.v  sets-fixed.v
textbooks/Building Blocks/text/: functions-one-to-one.txt  functions-onto.txt  graphs.txt  logic.txt  number-theory.txt  proofs.txt  relations.txt  sets.txt
textbooks/Discrete Math/: 1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  20.html  21.html  22.html  23.html  24.html  25.html  26.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html  intro.html
textbooks/Discrete Math/coq/: 1.v  10.v  13.v  14.v  16.v  17.v  19.v  2.v  20.v  21.v  23.v  25.v  3.v  4.v  5.v  6.v  7.v  8.v
textbooks/Discrete Math/coq/fixed/: 1.v  11.v  12.v  15.v  17.v  18.v  19.v  2.v  22.v  24.v  26.v  3.v  4.v  5.v  (+3 more)
