[tool.poetry]
name = "coq_to_lean"
version = "0.1.0"
description = ""
authors = ["Fady Adal <2masadel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
openai = "^1.9.0"
python-dotenv = "^1.0.0"
lean-dojo = "^1.5.1"
llama-cpp-python = "^0.2.37"


[tool.poetry.group.dev.dependencies]
python-lsp-server = { version = "^1.10.0", extras = ["all"] }
ipython = "^8.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
